--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,24 +1,26 @@
 .formContent {
   display: flex;
   flex-direction: column;
-  font-size: 1.5rem;
-  justify-content: space-evenly;
   align-items: center;
-  width: 100%; 
-  min-height: min-content;
+  gap: 3vmin;
+  width: 90%;
 }
-.formTitle {
-  width: 80%; 
-  font-size: 1.6rem;
-  text-align: start;
+.formTitle{
+  padding: 0 8px;
 }
 .formTitle h2 {
-  font-size: 3rem;
+  font-size: 2rem;
+}
+.formTitle p{
+  font-size: 1rem;
 }
 .formInput{
-  padding: 1em;
-  width: 80%;
   background-color: #d9d9d9;
+  padding: 1em 0;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  text-align:center;
 }
 .formInput:focus{
   outline: none;
@@ -26,14 +28,14 @@
 .formButtons{
   background-color: #F5754E;
   color: #f2f2f2;
-  padding: 1.2em;
+  padding: 0.3em;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-weight: 650;
-  width: 80%;
-  font-size: 2.5rem;
+  font-weight: 600;
+  font-size: 1.4rem;
   text-align: center;
+  width: 100%;
 }
 a {
   text-decoration: none;
@@ -41,4 +43,9 @@ a {
 }
 #google{
   background-color: #fff;
+  color: #000;
+  font-size: 1.2rem;
+}
+.smallThings{
+  display: block;
 }
