--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,6 +1,7 @@
 .about{
   display: none;
 }
+
 #errorMessage{
   display: none;
   background-color: #d11124;
@@ -9,6 +10,7 @@
   font-weight: 600;
   border-radius: 4px;
 }
+
 .formContent {
   display: flex;
   flex-direction: column;
@@ -31,9 +33,11 @@
   gap: 5vmin;
   margin-bottom: 3vmin;
 }
+
 .formTitle h2 {
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
+
 .formTitle p{
   font-size: 1rem;
 }
@@ -53,9 +57,11 @@
   border-radius: 5px;
   text-align:center;
 }
+
 .formInput:focus{
   outline: none;
 }
+
 .formButtons{
   background-color: #F5754E;
   color: #f2f2f2;
@@ -71,7 +77,7 @@
   transition: 0.3s;
 }
 
-button:hover {
+.formButtons:hover {
   background-color: #fd6132;
 }
 
@@ -85,9 +91,24 @@ hr{
   margin: 5px;  
 }
 
-#google{
-  width: 20vmin;
+.buttonGoogle{
+  display: flex;
+  align-items: center;
+  padding: 0.6rem 0.8rem;
+  gap: 5px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
 }
+
+.buttonGoogle:hover{
+  background-color: #d9d9d9;
+}
+
+.imgGoogle{
+  width: 5vmin;
+}
+
 .smallThings{
   display: block;
 }
@@ -150,6 +171,7 @@ hr{
   opacity: 0;
   pointer-events: none;
 }
+
 #modal.hide {
   top: 0;
 }
@@ -163,10 +185,15 @@ hr{
     display: none;
   }
   
+  .initialAbout{
+    display: none;
+  }
+  
   .formContent{
     display: grid;
     grid-template-columns: repeat(2, 50%);
-    grid-template-areas: "about formLogin";
+    grid-template-areas: 
+    "about formLogin";
     min-height: 100vh;
   }
 
@@ -181,8 +208,12 @@ hr{
     align-items: center;
   }
 
-  .initialAbout{
-    display: none;
+  .formTitle{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 8%;
+    margin-bottom: 0px;
   }
 
   .formLogin{
@@ -198,16 +229,6 @@ hr{
     max-width: 85%;
   }
 
-  hr{
-    width: 80%;
-    margin: 5px;
-    
-  }
-
-  #google{
-    width: 10vmin;
-  }
-
   .formInput{
     padding: 0.8em 0;
   }
@@ -215,6 +236,11 @@ hr{
   #aboutUpOn{
     text-align: justify;
     width: 80%;
+  }
+
+  hr{
+    width: 80%;
+    margin: 5px;
   }
 
   #open-modal{
