--- a/src/pages/login/register.css
+++ b/src/pages/login/register.css
@@ -1,4 +1,4 @@
-.formRegister{
+.formRegister {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,42 +7,78 @@
   min-height: 80%;
 }
 
-.formTitle{
+.formTitle {
   width: 100%;
 }
 
-.smallContent{
+.smallContent {
   font-size: 0.8rem;
   margin-bottom: -2.5vmin;
 }
 
-h2.formInputs{
+h2.formInputs {
   text-align: start;
 }
 
-.formInputs{
+.formInputs {
   display: flex;
   flex-direction: column;
   gap: 3vmin;
   width: 100%;
 }
 
-.formInput{
+.formInput {
   background-color: #d9d9d9;
   padding: 1em 0;
   width: 100%;
   border: none;
   border-radius: 5px;
-  text-align:center;
+  text-align: center;
+}
+
+.chooseIcon {
+  background-color: #6a6a6a;
+  padding: 1.5rem;
+  border-radius: 5px;
+}
+
+.chooseIcon p {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+input[type="radio"] {
+  appearance: none;
+}
+
+.iconUser {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+label {
+  display: block;
+  width: 60px;
+  float: left;
+  cursor: pointer;
+}
+
+input[type="radio"]:checked+label {
+  border-color: #ccf;
+}
+
+.iconImg {
+  width: 4rem;
 }
 
 @media (min-width: 1024px) {
-  .headerMenu{
+  .headerMenu {
     padding: 0;
     padding-top: 2.5vmin;
   }
 
-  #root{
+  #root {
     min-height: 75vh;
   }
 
@@ -50,33 +86,33 @@ h2.formInputs{
     width: 18vmin;
   }
 
-  .formTitle{
+  .formTitle {
     max-width: 85%;
   }
-  
+
   h2.formTitle {
     font-size: 1.6rem;
   }
-  
+
   p.formTitle {
     font-size: 0.8rem;
   }
 
-  .smallContent{
+  .smallContent {
     font-size: 0.6rem;
     margin-bottom: -2.5vmin;
   }
 
-  h2.formInputs{
+  h2.formInputs {
     text-align: center;
   }
 
-  .formInputs{
+  .formInputs {
     display: flex;
     max-width: 85%;
   }
 
-  .formInput{
+  .formInput {
     padding: 0.8em 0;
   }
 
