--- a/src/pages/timeline/timeline.css
+++ b/src/pages/timeline/timeline.css
@@ -1,22 +1,52 @@
+.timelineContent{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 90%;
+  /* width: 90%; */
+}
+
+hr{
+  width: 100%;
+  color: #3a3a3a;
+}
+
 .posts{
-  background-color: #6a6a6a;
+  display: flex;
+  flex-direction: column;
   padding: 1.2rem;
-  border-radius: 5px;
+  gap: 2.5vmin;
+  width: 90%;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.6);
 }
 .postHeader{
   display: flex;
-  gap:1rem;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.4rem;
   white-space: nowrap;
 }
+
+.postUserInfo{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 2.5vmin;
+}
+
 .postFooter{
   display: flex;
+  justify-content: space-between;
 }
+
 .votes{
   display: flex;
   gap: 2vmin;
 }
-#userImage {
-  width: 2rem;
+
+.userImage {
+  width: 3.5rem;
+  border-radius: 100px;
 }
 .createButton{
   position: absolute;
@@ -32,9 +62,141 @@
 .createButton img{
   width: 10vmin;
 }
+
 .postButtons img{
   width: 6vmin;
 }
-button{
+
+button.postButtons{
   all:initial;
+}
+
+#fade, #modal {
+  transition: 0.5s;
+  opacity: 1;
+  pointer-events: all;
+}
+
+#fade {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 5;
+}
+
+#modal {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #1a1a1a;
+  z-index: 10;
+  width: 90%;
+  border-radius: 0.5rem;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: flex-start; 
+  align-items: center;
+  padding-top: 2vmin;
+  padding-bottom: 2vmin; 
+  padding-left: 3.5vmin;
+}
+
+#userImagePost{
+  width: 3.5rem;
+  border-radius: 100px; 
+  padding: 1.5vmin;
+}
+
+.modal-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1rem;
+  gap: 2vmin;
+}
+
+#modal.hide,
+#fade.hide {
+  opacity: 0;
+  pointer-events: none;
+}
+
+#modal.hide {
+  top: 0;
+}
+
+#createPost{
+  resize: none;
+  width: 90%;
+  height: 30vmin;
+  border-radius: 0.5rem;
+  padding-top: 1vmin;
+  padding-left: 1.5vmin;
+}
+
+.buttonsCreate{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 90%;
+  gap: 5vmin;
+}
+
+.postButtonsCreate{
+  padding: 0.3em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 3vmin;
+  text-align: center;
+  opacity: 1;
+  transition: 0.3s;
+  height: 6vmin;
+}
+
+#userCreatPost{
+  font-weight: 600;
+}
+
+#close-modal{
+  background-color: #f2f2f2;
+  color: #F5754E;
+  width: 30%;
+}
+
+#sendPost{
+  background-color: #F5754E;
+  color: #f2f2f2;
+  width: 30%;
+}
+
+
+@media (min-width: 1024px) {
+  .posts{
+    /* width: 65%; */
+    max-width: 65%;
+  }
+
+  .postButtons img{
+    width: 3.5vmin;
+    cursor: pointer;
+  }
+
+  footer{
+    display: none;
+  }
+
+  #open-modal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 }
