--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@ html {
   justify-content: center;
   width: 100%;
   background-color: #1a1a1a;
+  box-shadow: 4px 2px 8px rgba(255, 255, 255, 0.2);
 }
 .headerMenu {
   padding: 3vmin;
