--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,5 +1,25 @@
+.header {
+  min-height: 10%;
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: #1a1a1a;
+  box-shadow: 0 8px 6px -6px rgba(255, 255, 255, 0.2);
+}
+.headerMenu {
+  padding: 3vmin 0;
+}
+#logo img {
+  width: 20vmin;
+}
+
 .about{
   display: none;
+}
+h2 {
+  padding-top: 10vmin;
 }
 
 #errorMessage{
@@ -15,11 +35,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 90%;
+  width: 100%;
   min-height: 90%;
 }
 
 .formLogin{
+  width: 90%;
   display: flex;
   flex-direction: column;
   gap: 3vmin;
@@ -113,13 +134,13 @@ hr{
   display: block;
 }
 
-#fade, #modal {
+#fade-about, #modal-about {
   transition: 0.5s;
   opacity: 1;
   pointer-events: all;
 }
 
-#fade {
+#fade-about {
   position: fixed;
   top: 0;
   left: 0;
@@ -129,7 +150,7 @@ hr{
   z-index: 5;
 }
 
-#modal {
+#modal-about {
   position: fixed;
   left: 50%;
   top: 50%;
@@ -144,11 +165,11 @@ hr{
   width: 50%;
 }
 
-.modal-header {
+.modal-header-about {
   display: flex;
   justify-content: center;  
 }
-.modal-body {
+.modal-body-about {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -162,17 +183,17 @@ hr{
   line-height: 1.8rem;
 }
 
-#close-modal {
+#close-modal-about {
   width: 15rem;
 }
 
-#modal.hide,
-#fade.hide {
+#modal-about.hide,
+#fade-about.hide {
   opacity: 0;
   pointer-events: none;
 }
 
-#modal.hide {
+#modal-about.hide {
   top: 0;
 }
 
@@ -243,7 +264,7 @@ hr{
     margin: 5px;
   }
 
-  #open-modal{
+  #open-modal-about{
     display: none;
   }
 
