T013-ERIKA: feat integration of edit and delete functions in the timeline

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -197,10 +197,6 @@ hr{
   top: 0;
 }
 
-.footer {
-  display: none;
-}
-
 @media (min-width: 1024px) {
   .header{
     display: none;
@@ -213,8 +209,7 @@ hr{
   .formContent{
     display: grid;
     grid-template-columns: repeat(2, 50%);
-    grid-template-areas: 
-    "about formLogin";
+    grid-template-areas: "about formLogin";
     min-height: 100vh;
   }
 
